--- a/.github/workflows/L2_test.yml
+++ b/.github/workflows/L2_test.yml
@@ -15,7 +15,7 @@ jobs:
 
     - name: download btcore 
       run: |
-        git clone https://${{ secrets.RDKCM_RDKE }}@github.com/rdkcentral/bluetooth.git btrcore/
+        git clone https://github.com/rdkcentral/bluetooth.git btrcore/
 
     - name: Install Dependencies
       run: |
