RDKEMW-3121:Update BTmgr client to use Power manager Plugin
Reason for change: Replacing IARM PowerManager calls with PowerManager Plugin calls.
Test Procedure: debug purpose 
Risks: Low 
Priority: P2

--- a/src/rpc/Makefile.am
+++ b/src/rpc/Makefile.am
@@ -37,5 +37,5 @@ include_HEADERS = ${top_srcdir}/include/rpc/btmgr_rbus_interface.h
 endif
 
 lib_LTLIBRARIES = libBTMgr.la
-libBTMgr_la_includedir = $(includedir) -lWPEFrameworkPowerController
+libBTMgr_la_includedir = $(includedir)
 libBTMgr_la_include_HEADERS = ${top_srcdir}/include/btmgr.h
