RDKEMW-3121:Update BTmgr client to use Power manager Plugin
Reason for change: Replacing IARM PowerManager calls with PowerManager Plugin calls.
Test Procedure: PowerState change
Risks: Low
Priority: P2

Signed-off-by: ppalan289 <preethi_palanisamy@comcast.com>

--- a/src/sysDiag/Makefile.am
+++ b/src/sysDiag/Makefile.am
@@ -36,8 +36,14 @@ AM_LDFLAGS += -lrbus -lsyscfg
 AM_CPPFLAGS += -DBTR_SYS_DIAG_RBUS_ENABLE=1
 endif
 
+if WITH_PI_BUILD
+AM_CPPFLAGS += $(PI_BUILD_FLAG)
+else
+AM_LDFLAGS += -lWPEFrameworkPowerController
+endif
+
 lib_LTLIBRARIES = libbtrMgrSysDiag.la
 libbtrMgrSysDiag_la_SOURCES = btrMgr_SysDiag.c btrMgr_DeviceUtils.c
-libbtrMgrSysDiag_la_CFLAGS = $(INCLUDE_FILES) -lWPEFrameworkPowerController
+libbtrMgrSysDiag_la_CFLAGS = $(INCLUDE_FILES)
 
 include_HEADERS = $(top_srcdir)/include/sysDiag/btrMgr_SysDiag.h $(top_srcdir)/include/sysDiag/btrMgr_DeviceUtils.h
