RDKEMW-3905: Remove pwrmgr component changes
Reason for change: This removes pwrmgr changes
Test Procedure: refer RDKEMW-3905
Risks: High
Signed-off-by:gsanto722 <grandhi_santoshkumar@comcast.com>

--- a/conf/btmgr.service
+++ b/conf/btmgr.service
@@ -18,7 +18,7 @@
 ##########################################################################
 [Unit]
 Description=Bluetooth Manager Daemon over IARM IPC
-After=iarmbusd.service bluetooth.service audiocapturemgr.service
+After=iarmbusd.service bluetooth.service audiocapturemgr.service wpeframework-powermanager.service
 Requires=iarmbusd.service bluetooth.service audiocapturemgr.service
 
 [Service]
