--- a/conf/btmgr.service
+++ b/conf/btmgr.service
@@ -19,7 +19,7 @@
 [Unit]
 Description=Bluetooth Manager Daemon over IARM IPC
 After=iarmbusd.service bluetooth.service audiocapturemgr.service wpeframework-powermanager.service
-Requires=iarmbusd.service bluetooth.service audiocapturemgr.service
+Requires=iarmbusd.service bluetooth.service audiocapturemgr.service wpeframework-powermanager.service
 
 [Service]
 Type=notify
